--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "gatsby-plugin-facebook-pixel",
-  "description": "Gatsby plugin to add facebook pixel onto a site",
-  "version": "1.0.3",
-  "author": "Gabe Barrientos <gbscopet@gmail.com> (https://www.twitter.com/gabefromutah)",
-  "devDependencies": {
-    "babel-cli": "^6.24.1"
-  },
-  "keywords": ["gatsby", "gatsby-plugin", "facebook pixel"],
-  "license": "MIT",
-  "scripts": {
-    "build": "babel src --out-dir .",
-    "watch": "babel -w src --out-dir ."
-  },
+  "name": "gatsby-plugin-vk-pixel",
+  "main": "index.js",
+  "description": "Gatsby plugin to add VK pixel onto a site",
+  "version": "1.0.2",
+  "author": "Mark Langovoi <marklangovoi@gmail.com>",
+  "keywords": [
+    "gatsby",
+    "gatsby-plugin",
+    "vk pixel"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/gscopet/gatsby-plugin-facebook-pixel"
+    "url": "https://github.com/langovoi/gatsby-plugin-vk-pixel"
+  },
+  "bugs": {
+    "url": "https://github.com/langovoi/gatsby-plugin-vk-pixel/issues"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1"
+  },
+  "dependencies": {
+    "common-tags": "^1.8.0"
+  },
+  "scripts": {
+    "build": " babel src --out-dir .",
+    "watch": "babel -w src --out-dir .",
+    "prepare": "npm run build"
   }
 }
